{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 76,
  "lineage": "285f8e0d-ee98-c114-4872-e64d31330610",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "qrated_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:106314624089:internet-gateway/igw-0c0cbab315bd70ef7",
            "id": "igw-0c0cbab315bd70ef7",
            "owner_id": "106314624089",
            "tags": {
              "AppProject": "qrated"
            },
            "tags_all": {
              "AppProject": "qrated"
            },
            "vpc_id": "vpc-036b2bf89d4e01338"
          },
          "dependencies": [
            "aws_vpc.qrated_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "qrated_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c0cbab315bd70ef7",
            "id": "r-rtb-07fd21df9d320cd671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07fd21df9d320cd67",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.qrated_internet_gateway",
            "aws_vpc.qrated_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qrated_db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:106314624089:security-group/sg-0c15919a4bf691615",
            "description": "Allow inbound and outbound traffic on port 5432",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0c15919a4bf691615",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "qrated-db-security-group",
            "name_prefix": "",
            "owner_id": "106314624089",
            "revoke_rules_on_delete": false,
            "tags": {
              "AppProject": "qrated"
            },
            "tags_all": {
              "AppProject": "qrated"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b2bf89d4e01338"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.qrated_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qrated_nodeapi_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:106314624089:security-group/sg-0cc7cdb1151dd78b1",
            "description": "Allow inbound traffic on port 8080 (http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc7cdb1151dd78b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "qrated-nodeapi-security-group",
            "name_prefix": "",
            "owner_id": "106314624089",
            "revoke_rules_on_delete": false,
            "tags": {
              "AppProject": "qrated"
            },
            "tags_all": {
              "AppProject": "qrated"
            },
            "timeouts": null,
            "vpc_id": "vpc-036b2bf89d4e01338"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.qrated_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "qrated_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:106314624089:subnet/subnet-0bc726dcb43ebffec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc726dcb43ebffec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106314624089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AppProject": "qrated"
            },
            "tags_all": {
              "AppProject": "qrated"
            },
            "vpc_id": "vpc-036b2bf89d4e01338"
          },
          "dependencies": [
            "aws_vpc.qrated_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "qrated_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:106314624089:subnet/subnet-0ccd4b2d445df90cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccd4b2d445df90cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106314624089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AppProject": "qrated"
            },
            "tags_all": {
              "AppProject": "qrated"
            },
            "vpc_id": "vpc-036b2bf89d4e01338"
          },
          "dependencies": [
            "aws_vpc.qrated_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "qrated_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:106314624089:vpc/vpc-036b2bf89d4e01338",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b03092049f59c660",
            "default_route_table_id": "rtb-07fd21df9d320cd67",
            "default_security_group_id": "sg-0d6bb506dc6afb1a2",
            "dhcp_options_id": "dopt-51acce39",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036b2bf89d4e01338",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07fd21df9d320cd67",
            "owner_id": "106314624089",
            "tags": {
              "AppProject": "qrated"
            },
            "tags_all": {
              "AppProject": "qrated"
            }
          }
        }
      ]
    }
  ]
}